# iai_boxy_sim

./: CMakeLists.txt  README.md  iai_boxy_sim_plugins.xml  package.xml
config/: boxy_sim.yaml  ros_control_sim.yaml  ros_control_sim_closed_loop.yaml  sim_config.yaml
include/iai_boxy_sim/: fire_hose_controller.h  fire_hose_velocity_controller.h  velocity_fire_hose_controller.h
launch/: boxy.launch  boxy_body.launch  boxy_odom.launch  boxy_sim.launch  ros_control_sim.launch  ros_control_sim_closed_loop.launch  wsg_50_for_kinematic_sim.launch
rosinstall/: catkin.rosinstall
src/iai_boxy_sim/: fire_hose_velocity_controller.cpp  odometry_simulation.cpp  velocity_fire_hose_controller.cpp
test_scripts/: move_arms  move_base  reset_sim
