<?xml version="1.0"?>
<package format="2">
  <name>iai_boxy_sim</name>
  <version>0.0.1</version>
  <description>
    A lightweight kinematics simulation of IAI's Boxy robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>iai_boxy_description</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
