<?xml version="1.0"?>
<package format="2">
  <name>iai_boxy_sim</name>
  <version>0.0.1</version>
  <description>
    A lightweight kinematics simulation of IAI's Boxy robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="1.11.20">roscpp</depend>
  <depend version_gte="1.11.9">nav_msgs</depend>
  <depend version_gte="1.11.8">tf</depend>
  <depend>iai_boxy_description</depend>
  <depend version_gte="0.4.0">ros_control_boilerplate</depend>
  <depend version_gte="0.9.3">joint_state_controller</depend>
  <depend version_gte="1.11.2">robot_state_publisher</depend>
  <depend version_gte="0.9.4">controller_interface</depend>
  <depend version_gte="0.9.4">hardware_interface</depend>
  <depend version_gte="1.9.1">realtime_tools</depend>
  <depend version_gte="1.10.4">pluginlib</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
